# PilotLog

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: 01_UNIVERSAL_PRINCIPLES.md  02_LOGBOOK_PRINCIPLES.md  03_LOGBOOK_SPECIFICATIONS.md
docs/source/: conf.py  index.rst
docs/source/modules/: api.rst  config.rst  importers.rst
scripts/: fix_block_times.py  import_swa.py  load_airports.py  run_dev.sh
src/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/frontend/src/: App.svelte  main.js
src/frontend/src/components/: Dashboard.svelte  FlightTable.svelte  Gauge.svelte  ImportModal.svelte  RouteMap.svelte  Settings.svelte  Stats.svelte
src/frontend/src/lib/: api.js  filters.js  settings.js
src/frontend/src/styles/: global.css
src/pilotlog/: __init__.py  __main__.py  config.py  main.py
src/pilotlog/api/: __init__.py  routes.py  schemas.py
src/pilotlog/calculations/: __init__.py  aggregations.py  rolling.py
src/pilotlog/database/: __init__.py  connection.py  models.py  queries.py  schema.sql
src/pilotlog/importers/: __init__.py  base.py  swa_csv.py
tests/: __init__.py  conftest.py  test_api.py  test_calculations.py  test_importers.py
